--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,52 @@
-
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
 }
 
+strong {
+    font-weight: 700;
+}
 
 .main {
-    max-width: 375px;
-    height: 667px;
+    
+    height: 100%;
     background-color: #F3F3F3;
     margin: 0 auto;
-    
+    width: 100%;
+
 }
 
 .topo {
-    height: 106px;
-    background-color: rgb(238, 232, 232);
+    height: 12%;
+    width: 100%;
+    background-color: #FFFFFF;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
 }
 
 .logouol {
     width: 75px;
     height: 53px;
-    margin-left: 15px;
+    margin-left: 20px;
+    
 }
 
 .grouplogo {
     width: 45px;
     height: 45px;
     margin-right: 15px;
+   
 }
 
-.chatbox{
-    height: 483px;
+.chatbox {
+    height: 100%;
     background-color: #E5E5E5;
     font-size: 14px;
     overflow: scroll;
-    
-    
-}
-.mensagem-entra-e-sai-da-sala{
-    height: 40px;
-    background-color: #DCDCDC;
-    display: flex;
-    align-items: center;
-
-}
-
-.mensagem-geral{
-    height: 40px;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    align-items: center;
-    
-}
-
-.mensagem-reservada{
-    height: 40px;
-    background-color: #FFDEDE;
-    display: flex;
-    align-items: center;
+    width: 100%;
+    margin-bottom: 80px;
     
 }
 
@@ -71,6 +57,13 @@ body {
     align-items: center;
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+-webkit-box-shadow: -1px 0px 9px 0px rgba(85,85,85,0.76); 
+box-shadow: -1px 0px 9px 0px rgba(85,85,85,0.76);
+    
 
 }
 
@@ -86,22 +79,54 @@ body {
 
 .status {
     background-color: #DCDCDC;
-    padding: 8px;
-}
+    padding: 15px;  
+    word-wrap: break-word;
+    max-width: 375px;
+    
+}   
 
 .message {
     background-color: #FFFFFF;
-    padding: 8px;
+    padding: 15px;
+    max-width: 375px;
+    word-wrap: break-word;
+    
 }
+
+
 
 .reserved {
     background: #FFDEDE;
-    padding: 8px;
+    padding: 15px;
+    word-wrap: break-word;
+    max-width: 375px;
 }
 
-.enviar-mensagem-box textarea:focus, input:focus, select:focus {
+
+li {
+    overflow-x: hidden;
+    height: auto;
+    flex-wrap: wrap;
+    
+}
+
+.enviar-mensagem {
     box-shadow: 0 0 0 0;
     border: 0 none;
     outline: 0;
     border-color: #FFFFFF;
-} 
+    font-style: italic;
+    margin-left: 20px;
+    font-size: 15px;
+}
+
+.mensagens li{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    
+}
+
+span {
+    color: #aaaaaa;
+    margin-right: 5px;
+}
